Add README.md for frontend code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -793,7 +793,7 @@
                     </button>
                 </form>
                 <div class="forgot-password">
-                    <a href="#" id="forgotPasswordLink">Forgot your password?</a>
+                    <a href="forgot-password.html" id="forgotPasswordLink">Forgot your password?</a>
                 </div>
             </div>
         </div>
